--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: pm-internship-recommender
     env: python
-    buildCommand: "cd backend && pip install -r requirements.txt"
-    startCommand: "cd backend && python app.py"
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python start.py"
     plan: free
     healthCheckPath: /
     envVars:
